<resources>
    <string name="app_name">blueharvest</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_username">username</string>
    <string name="action_register">Register</string>
    <string name="action_create_username">Username</string>
    <string name="action_create_user_confirm_password">Confirm Password</string>
    <string name="action_create_user_password">Password</string>
    <string name="title_activity_create_user">create_user</string>
    <string name="action_create_user_button">Create User</string>
    <string name="error_invalid_username">This username is Invalid</string>
    <string name="title_activity_user_home_page">user_home_page</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_add_geocache">Add Geocache</string>
    <string name="add_geocache_code">Code</string>
    <string name="add_geocache_name">Name</string>
    <string name="add_geocache_description">Description</string>
    <string name="add_geocache_latitude">Latitude</string>
    <string name="add_geocache_longitude">Longitude</string>
    <string name="add_geocache_save">Save</string>
    <string name="view_geocache_log">Enter a Log</string>
    <string name="view_geocache_favorite_off">favorite</string>
    <string name="view_geocache_found_on">found</string>
    <string name="view_geocache_creator_image">creator image</string>
    <string name="add_logbook_entry_text">Enter the logbook entry text here.</string>
    <string name="add_logbook_entry_title">Title</string>
    <string name="add_logbook_entry_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_user_page">user_page</string>
    <string name="help_version">v0.0.2</string>
    <string name="help_javadocs">https://blueharvestgeo.com/javadocs</string>
    <string name="help_title">blueharvest</string>
    <string name="help_heading1">Lorem Ipsum</string>
    <string name="help_body1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra pellentesque sollicitudin. Quisque dolor odio, euismod nec diam sed, dapibus varius felis. Morbi convallis dapibus quam ut viverra. Aliquam enim tellus, fermentum at rutrum convallis, blandit at tellus. Cras ultricies libero non magna venenatis, ac lacinia orci tristique. Proin non nulla ac velit convallis consequat auctor eget ipsum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed pretium hendrerit odio et ultricies. Duis dignissim vel magna sed rhoncus. Etiam quis nisi in nisl auctor tempor. Aliquam rhoncus, tellus id commodo congue, magna lectus hendrerit sapien, nec vehicula nulla neque ut ligula.</string>
    <string name="help_wikipedia">https://en.wikipedia.org/wiki/Geocaching</string>
    <string name="help_more">More Information</string>
    <string name="help_matt">Matt (40.7982009, -77.8599084)</string>
    <string name="help_brian">Brian (40.7982009, -77.8599084)</string>
    <string name="help_jamie">Jamie (40.493012, -75.611022)</string>
    <string name="help_body2">Donec mollis nisi nec massa molestie pretium. Sed ut erat consectetur nulla porta condimentum. Integer eu tincidunt neque. Mauris vestibulum at dui vel ornare. Suspendisse laoreet diam ut ornare finibus. Vivamus fringilla scelerisque bibendum. In orci nunc, semper et dolor a, convallis lacinia risus. Mauris non gravida augue, eu tempus justo. Donec id sem vitae quam dignissim consectetur ut varius orci. In consectetur enim elementum ligula fringilla, a pellentesque turpis porttitor. Curabitur accumsan, nisi sed aliquam ultrices, mauris nisi blandit odio, sed gravida massa velit eu diam. Maecenas efficitur gravida nunc et luctus. Aenean vitae nulla accumsan, hendrerit sapien ut, fermentum metus. Duis sapien ex, sodales vitae interdum in, eleifend at lectus.</string>
    <string name="help_heading2">Donec Mollis</string>
    <string name="help_bug">Report a Bug</string>
    <string name="help_body3">Please report all bugs on:</string>
    <string name="help_issues">https://github.com/otzu1/Blueharvest-app/issues</string>
    <string name="view_geocache_favorite">favorite</string>
    <string name="view_geocache_found">found</string>
    <string name="view_geocache_found_label">Found?</string>
    <string name="view_geocache_favorite_label">Favorite</string>
    <string name="error_the_scream">The Scream</string>
    <string name="error_image_content_description">Oops! We seem to have a problem!</string>
    <string name="error_message">Oops! We seem to have a problem!.</string>
    <string name="user_page_title">Geocache Search</string>
    <string name="user_page_for_radius">Radius</string>
    <string name="user_page_radius_hint">(in km)</string>
    <string name="user_page_map_search">Map Search</string>
    <string name="user_page_list_search">List Search</string>
    <string name="user_page_add_geocache">Add Geocache</string>
    <string name="user_page_settings">Settings</string>
    <string name="user_page_help">Help</string>
    <string name="user_page_logout">Logout</string>
    <string name="user_page_latitude">latitude</string>
    <string name="user_page_longitude">longitude</string>
    <string name="listview_logbook_entry_image_desc">author image</string>
    <string name="distance_label">Distance Units</string>
    <string name="settings_km">km</string>
    <string name="settings_mi">mi</string>
    <string name="settings_notifications_label">Notifications</string>
    <string name="settings_login_label">Auto Login</string>
</resources>
