<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blueharvest.geocaching.HelpActivity">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/help_title"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <!--//link the content of web //-->
            <!--//change the color of the link //-->
            <TextView
                android:id="@+id/heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_heading1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TextView
                android:id="@+id/body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_body1"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/help_heading2"
                android:id="@+id/heading2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/help_body2"
                android:id="@+id/body2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/help_more"
                android:id="@+id/more"/>

            <TextView
                android:id="@+id/wikipedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/help_wikipedia"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorLink="#576586"/>

            <TextView
                android:id="@+id/javadocs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/help_javadocs"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorLink="#576586"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8bae88">

                <TextView
                    android:id="@+id/matt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_matt"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/brian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_brian"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/jamie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_jamie"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/help_version"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
