<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blueharvest.geocaching.create_user">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/createUserButton"
        android:id="@+id/CreateUsernameForm">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createUserName"
            android:layout_gravity="center_horizontal"
            android:hint="@string/action_create_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/createUserPwd"
            android:layout_below="@+id/createUserName"
            android:layout_alignLeft="@+id/createUserName"
            android:layout_alignStart="@+id/createUserName"
            android:hint="@string/action_create_user_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/createUserPwdConf"
            android:layout_below="@+id/createUserPwd"
            android:layout_centerHorizontal="true"
            android:hint="@string/action_create_user_confirm_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/createUserEmail"
            android:layout_below="@+id/createUserPwdConf"
            android:layout_alignLeft="@+id/createUserPwdConf"
            android:layout_alignStart="@+id/createUserPwdConf"
            android:hint="@string/prompt_email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create User"
            android:id="@+id/createUserButton"
            android:layout_below="@+id/createUserEmail"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
