<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blueharvest.geocaching.AddGeocacheActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                >

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/latitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:ems="10"
                    android:hint="@string/add_geocache_latitude"
                    android:inputType="numberSigned|numberDecimal"/>

                <EditText
                    android:id="@+id/longitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.49"
                    android:ems="10"
                    android:hint="@string/add_geocache_longitude"
                    android:inputType="numberSigned|numberDecimal"/>
            </LinearLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:capitalize="words"
                android:hint="@string/add_geocache_name"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/add_geocache_description"
                android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|textMultiLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/add_geocache_code"
                    android:layout_gravity="bottom"/>

                <Spinner
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:id="@+id/type"
                    android:spinnerMode="dropdown"
                    android:layout_weight="0.25"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                >

                <Spinner
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:id="@+id/size"
                    android:spinnerMode="dropdown"/>

                <Spinner
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:id="@+id/terrain"
                    android:spinnerMode="dropdown"/>

                <Spinner
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:id="@+id/difficulty"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_geocache_save"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>